Fix responsivity on mobile

--- a/styles/basics/layout.css
+++ b/styles/basics/layout.css
@@ -8,8 +8,8 @@
 
 .main-layout>.full {
     grid-column: 1 / -1;
-    margin-inline: -20px;
-    padding-inline: 20px;
+    /* margin-inline: -20px; */
+    /* padding-inline: 20px; */
 }
 
 /* gallery-layout */
