--- a/styles/setup/mq.css
+++ b/styles/setup/mq.css
@@ -50,7 +50,6 @@
         display: block; 
         width: 100%;
         height: auto;
-        max-width: 400px; 
         margin: 0 auto; 
     }
 }
@@ -61,10 +60,6 @@
     .gallery-layout {
         grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     }
-
-    .editor-container {
-        max-width: 600px;
-    }
 }
 
 /* MEDIUM */
@@ -72,6 +67,12 @@
     .main-layout {
         padding: 30px;
     }
+    .main-layout>.full {
+        grid-column: 1 / -1;
+        /* margin-inline: -30px;
+        padding-inline: 30px; */
+    }
+    
 
     .gallery-layout {
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -99,6 +100,12 @@
     .main-layout {
         padding: 40px;
     }
+    .main-layout>.full {
+        grid-column: 1 / -1;
+        /* margin-inline: -40px;
+        padding-inline: 40px; */
+    }
+    
 
     .gallery-layout {
         grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
